force-app/main/default/objects/AAR_Scholarly_Output__c/AAR_Scholarly_Output__c.object-meta.xml
<CustomObject>
    <label>AAR-Scholarly Output</label>
    <nameField>
        <displayFormat>AAR Scholar Output-{0000}</displayFormat>
        <label>AAR Scholarly Output Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAR Scholarly Outputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>