force-app/main/default/objects/AAR_Scholarly_Output__c/fields/AAR__c.field-meta.xml
<CustomField>
    <fullName>AAR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AAR</label>
    <referenceTo>UHN_Publication_Author__c</referenceTo>
    <relationshipLabel>AAR Scholarly Outputs (AAR)</relationshipLabel>
    <relationshipName>AAR_Scholarly_Outputs1</relationshipName>
    <type>Lookup</type>
</CustomField>