force-app/main/default/objects/AAR_Scholarly_Output__c/fields/AAR_Record__c.field-meta.xml
<CustomField>
    <fullName>AAR_Record__c</fullName>
    <label>AAR-Record</label>
    <referenceTo>UHN_AAR__c</referenceTo>
    <relationshipLabel>AAR Scholarly Outputs</relationshipLabel>
    <relationshipName>AAR_Scholarly_Outputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>