force-app/main/default/objects/AAR_Scholarly_Output__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AAR Scholarly Outputs</relationshipLabel>
    <relationshipName>AAR_Scholarly_Outputs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>