force-app/main/default/objects/AAR_Scholarly_Output__c/fields/Data_Origin__c.field-meta.xml
<CustomField>
    <fullName>Data_Origin__c</fullName>
    <description
  >Indicates which system created this record. Used by RecordType assignment automation: Manual → Manual_Entry; any other value → Proposed. Set by integration processes on inbound records; defaults to Manual for PI-created records.</description>
    <label>Data Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Wellspring</fullName>
            </value>
            <value>
                <fullName>CAPCR</fullName>
            </value>
            <value>
                <fullName>FCC</fullName>
            </value>
            <value>
                <fullName>GAM</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>