force-app/main/default/objects/AAR_Scholarly_Output__c/fields/Last_Sync_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_At__c</fullName>
    <description
  >Timestamp of the last source-system sync processed by the reconciliation service. Updated on every reconcile() call that touches this record (including no-ops where hash matched).</description>
    <label>Last Sync At</label>
    <type>DateTime</type>
</CustomField>