force-app/main/default/objects/AAR_Scholarly_Output__c/fields/Override_Payload__c.field-meta.xml
<CustomField>
    <fullName>Override_Payload__c</fullName>
    <description>Field-level PI corrections, read via merge-at-display</description>
    <label>Override Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>