force-app/main/default/objects/AAR_Scholarly_Output__c/fields/Source_Hash__c.field-meta.xml
<CustomField>
    <fullName>Source_Hash__c</fullName>
    <description
  >SHA-256 of the last source payload processed. Used by the reconciliation service to detect drift without diffing JSON.</description>
    <label>Source Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>