force-app/main/default/objects/AAR_Scholarly_Output__c/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Verification_Status</valueSetName>
    </valueSet>
</CustomField>