force-app/main/default/objects/AAR_Scholarly_Output__c/fields/Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Verified_At__c</fullName>
    <description>Timestamp of the most recent PI</description>
    <label>Verified At</label>
    <type>DateTime</type>
</CustomField>