force-app/main/default/objects/AAR_Scholarly_Output__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AAR_Scholarly_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>