force-app/main/default/objects/AAR_Scholarly_Output__c/recordTypes/Invited_Talk.recordType-meta.xml
<RecordType>
    <fullName>Invited_Talk</fullName>
    <active>true</active>
    <label>Invited Talk</label>
</RecordType>