force-app/main/default/objects/AAR_Scholarly_Output__c/recordTypes/Media_Impact.recordType-meta.xml
<RecordType>
    <fullName>Media_Impact</fullName>
    <active>true</active>
    <label>Media &amp; Impact</label>
</RecordType>