force-app/main/default/objects/AAR_Scholarly_Output__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <label>Other</label>
</RecordType>