force-app/main/default/objects/AAR_Scholarly_Output__c/recordTypes/Presentation.recordType-meta.xml
<RecordType>
    <fullName>Presentation</fullName>
    <active>true</active>
    <label>Presentation</label>
</RecordType>